tests/baselines/reference/tsxUnionElementType1.errors.txt
tests/cases/conformance/jsx/file.tsx(12,10): error TS2322: Type 'boolean' is not assignable to type 'never'.


==== tests/cases/conformance/jsx/file.tsx (1 errors) ====
    import React = require('react');
    
    function SFC1(prop: { x: number }) {
        return <div>hello</div>;
    };
    
    function SFC2(prop: { x: boolean }) {
        return <h1>World </h1>;
    }
    
    var SFCComp = SFC1 || SFC2;
    <SFCComp x />
             ~
!!! error TS2322: Type 'boolean' is not assignable to type 'never'.